// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolNav nested navigation landmarks assigns a single nav id and multiple ul ids for expanded submenus 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Main navigation" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item kol-nav__list-item--expanded kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a aria-controls="kol-nav-list-0-0-nonce" aria-expanded="true" class="kol-link__anchor" href="#section">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        Section
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-minus" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
            <ul class="kol-nav__list kol-nav__list--nested kol-nav__list--vertical" id="kol-nav-list-0-0-nonce">
              <li class="kol-nav__list-item kol-nav__list-item--expanded kol-nav__list-item--has-children">
                <div class="kol-nav__entry-wrapper">
                  <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                    <a aria-controls="kol-nav-list-0-0-1-0-nonce" aria-expanded="true" class="kol-link__anchor" href="#child-link">
                      <span class="kol-link__text kol-span">
                        <span class="kol-span__container">
                          <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                          <span class="kol-span__label">
                            Child link
                          </span>
                          <span aria-hidden="true" class="kol-span__slot" hidden="">
                            <slot name="expert" slot="expert"></slot>
                          </span>
                          <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-minus" role="presentation"></i>
                        </span>
                      </span>
                    </a>
                  </div>
                </div>
                <ul class="kol-nav__list kol-nav__list--nested kol-nav__list--vertical" id="kol-nav-list-0-0-1-0-nonce">
                  <li class="kol-nav__list-item kol-nav__list-item--active">
                    <div class="kol-nav__entry-wrapper">
                      <kol-button-wc _label="Grandchild info" class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible"></kol-button-wc>
                    </div>
                  </li>
                </ul>
              </li>
              <li class="kol-nav__list-item">
                <div class="kol-nav__entry-wrapper">
                  <kol-button-wc _label="Child button" class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible"></kol-button-wc>
                </div>
              </li>
              <li class="kol-nav__list-item">
                <div class="kol-nav__entry-wrapper">
                  <kol-button-wc _label="Child hint" class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible"></kol-button-wc>
                </div>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasCompactButton=false 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        Homepage
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        Nav - aria-current
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a aria-expanded="false" class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        3 Navigation point
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasCompactButton=true 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        Homepage
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        Nav - aria-current
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a aria-expanded="false" class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        3 Navigation point
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
      <div class="kol-nav__compact">
        <kol-button-wc _ariacontrols="kol-nav-nonce" _ariaexpanded="" _hidelabel="" _icons="kolicon-chevron-left" _label="kol-nav-minimize" _tooltipalign="right" class="kol-nav__toggle-button"></kol-button-wc>
      </div>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasIconsWhenExpanded=false 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        Homepage
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        Nav - aria-current
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a aria-expanded="false" class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        3 Navigation point
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasIconsWhenExpanded=true 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        Homepage
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        Nav - aria-current
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a aria-expanded="false" class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="codicon codicon-home kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        3 Navigation point
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hideLabel=false 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        Homepage
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        Nav - aria-current
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a aria-expanded="false" class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        3 Navigation point
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hideLabel=true 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--is-compact">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-link" role="presentation"></i>
                      <span class="kol-span__label">
                        Homepage
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-link" role="presentation"></i>
                      <span class="kol-span__label">
                        Nav - aria-current
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a aria-expanded="false" class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="codicon codicon-home kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        3 Navigation point
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-button-wc _hidelabel="" _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        Homepage
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        Nav - aria-current
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-link kol-link--inline kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <a aria-expanded="false" class="kol-link__anchor" href="#">
                  <span class="kol-link__text kol-span">
                    <span class="kol-span__container">
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                      <span class="kol-span__label">
                        3 Navigation point
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden="">
                        <slot name="expert" slot="expert"></slot>
                      </span>
                      <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;
